# Charger-Watcher

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release-please.yml
alembic/: env.py
alembic/versions/: 20260420_0001_initial.py  20260420_0002_uniq_notif.py  20260507_0003_notif_delivered_at.py  20260510_0004_uniq_sub_user_loc.py  20260510_0005_notify_quota.py  20260510_0006_payments.py  20260512_0007_quiet_hours.py  20260512_0008_referrals.py
docs/legal/: README.md  privacy_audit.md  refund_policy.md  terms_of_service.md
docs/plans/: miniapp-map.md
src/: config.py  logging_setup.py
src/api/: client.py  models.py
src/bot/: geo.py  main.py  notifier.py  onboarding.py
src/db/: models.py  session.py
src/poller/: main.py
tests/: conftest.py  test_notifier_dedupe.py  test_stream_consumer_group.py
