[project]
name = "charger-watcher"
version = "0.2.1"
description = "Telegram bot that notifies about free EV charging connectors (Belarus)"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "structlog>=24.1",
    "orjson>=3.10",
    "aiolimiter>=1.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
packages = ["src/api", "src/bot", "src/db", "src/poller"]
include = ["src/config.py", "src/logging_setup.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# E402 — module-import-not-at-top: тесты используют pytest.importorskip
# для опциональных зависимостей (fakeredis) до основных импортов.
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
